<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="vertical" >

        <TextView
            android:id="@+id/text_consultation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_acces"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/bouton_fiche"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_fiche" />
        
        <Button
        	android:id="@+id/bouton_bilan"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/button_bilan" />

</LinearLayout>