<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="horizontal" >
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="7dp"
        android:background="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#96b2c6"
        android:orientation="vertical"
        android:padding="3dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#003961"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/listViewFiche_idGroupe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:ellipsize="end"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@string/listViewGroupe_idGroupe"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#003961"
            android:orientation="horizontal" >
            
            <TextView
                android:id="@+id/listViewFiche_idProjet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="#96b2c6"
                android:ellipsize="end"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:lines="1"
                android:text="@string/listViewGroupe_idProjet"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:textStyle="bold" />
        	
        	<TextView
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:background="#96b2c6"
        	    android:focusable="false"
        	    android:focusableInTouchMode="false"
        	    android:paddingLeft="5dp"
        	    android:paddingRight="5dp"
        	    android:text="@string/separateur_trait"
        	    android:textAppearance="?android:attr/textAppearanceLarge"
        	    android:textColor="#ffffff"
        	    android:textSize="12sp"
        	    android:textStyle="bold" />

            <TextView
                android:id="@+id/listViewFiche_nomProjet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#96b2c6"
                android:ellipsize="end"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:maxLines="1"
                android:text="@string/libelle_developpement_android"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/listViewFiche_libelle_progression"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:focusable="false"
            	android:focusableInTouchMode="false"
                android:text="@string/listViewFiche_libelle_progression"
                android:textColor="#ffffff"
                android:textSize="12sp" />
            
            <TextView
            	android:id="@+id/listViewFiche_progression"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_marginRight="5dp"
            	android:focusable="false"
            	android:focusableInTouchMode="false"
            	android:text="@string/listViewFiche_progression"
            	android:textAppearance="?android:attr/textAppearanceLarge"
            	android:textColor="#ffffff"
            	android:textSize="12sp"
            	android:textStyle="bold" />
            
           	<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_marginRight="5dp"
            	android:focusable="false"
            	android:focusableInTouchMode="false"
            	android:text="@string/separateur_slash"
            	android:textAppearance="?android:attr/textAppearanceLarge"
            	android:textColor="#ffffff"
            	android:textSize="12sp"
            	android:textStyle="bold" />

            <TextView
                android:id="@+id/listViewFiche_progression_totale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
            	android:focusableInTouchMode="false"
                android:text="@string/listViewFiche_progression_totale"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>