<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="horizontal" >
    
    <View
        android:layout_width="319dp"
        android:layout_height="7dp"
        android:background="#ffffff" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#96b2c6"
        android:orientation="horizontal" >
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#eff1f2"
            android:padding="5dp" >
        
            <CheckBox 
                android:id="@+id/listViewProjet_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_gravity="center_vertical"/>
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp" >
        
        	<LinearLayout
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:layout_marginTop="5dp"
            	android:orientation="horizontal" >

        		<TextView
        		    android:id="@+id/listViewProjet_idProjet"
        		    android:layout_width="wrap_content"
        		    android:layout_height="wrap_content"
        		    android:layout_marginRight="10dp"
        		    android:ellipsize="end"
        		    android:focusable="false"
        		    android:focusableInTouchMode="false"
        		    android:maxLines="1"
        		    android:text="@string/listViewProjet_idProjet"
        		    android:textAppearance="?android:attr/textAppearanceLarge"
        		    android:textColor="#003961"
        		    android:textSize="12sp"
        		    android:textStyle="bold" />
        	
        		<TextView
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
            		android:layout_marginRight="10dp"
            		android:focusable="false"
                	android:focusableInTouchMode="false"
            		android:text="@string/separateur_trait"
            		android:textAppearance="?android:attr/textAppearanceLarge"
            		android:textColor="#003961"
            		android:textSize="15sp"
            		android:textStyle="bold" />
        
        		<TextView
        		    android:id="@+id/listViewProjet_nomProjet"
        		    android:layout_width="match_parent"
        		    android:layout_height="wrap_content"
        		    android:layout_marginRight="10dp"
        		    android:ellipsize="middle"
        		    android:focusable="false"
        		    android:focusableInTouchMode="false"
        		    android:maxLines="1"
        		    android:text="@string/libelle_developpement_android"
        		    android:textAppearance="?android:attr/textAppearanceLarge"
        		    android:textColor="#003961"
        		    android:textSize="12sp" />
        	
       		</LinearLayout>
        
        	<LinearLayout
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    android:layout_marginTop="5dp"
        	    android:background="#003961"
        	    android:gravity="center"
        	    android:orientation="horizontal" >

            	<TextView
                	android:id="@+id/listViewProjet_niveau"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:focusable="false"
                	android:focusableInTouchMode="false"
                	android:text="@string/listViewProjet_niveau"
                	android:textColor="#ffffff"
                	android:textSize="12sp"
                	android:textStyle="bold" />
        	</LinearLayout>
        
        	<LinearLayout
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    android:layout_marginTop="5dp"
        	    android:gravity="center"
        	    android:orientation="horizontal" >

            	<TextView
            	    android:id="@+id/listViewProjet_description"
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:ellipsize="end"
            	    android:focusable="false"
            	    android:focusableInTouchMode="false"
            	    android:text="@string/listViewProjet_description"
            	    android:textColor="#ffffff"
            	    android:textSize="12sp"
            	    android:textStyle="italic" />

        	</LinearLayout>
    	</LinearLayout>
        
    </LinearLayout>
    
</LinearLayout>