<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#659025"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#4a4a4a"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="28dp"
                android:layout_height="30dp"
                android:background="#659025"
                android:contentDescription="@+id/attribut_Todo"
                android:padding="5dp"
                android:src="@drawable/groupe" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:background="#659025"
                android:gravity="center|right"
                android:paddingRight="20dp"
                android:text="@string/nom_page_groupes"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
    
<!-- LIBELLE LISTE DES PROJETS -->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:orientation="vertical" >

            <View
                android:layout_width="600dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="#8a8a8a" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center" >

                <Spinner
                    android:id="@+id/groupe_spinner_annee"
                    android:layout_width="103dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="3dp"
                    android:background="#eff1f2"
                    android:entries="@array/table_annees"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:prompt="@string/affichage_annees" />

                <Button
                    android:id="@+id/groupe_bouton_liste"
                    android:layout_width="110dp"
                    android:layout_height="20dp"
                    android:background="#659025"
                    android:onClick="ButtonOnclick"
                    android:text="@string/libelle_liste"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/groupe_bouton_nouveau"
                    android:layout_width="110dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="3dp"
                    android:background="#659025"
                    android:onClick="ButtonOnclick"
                    android:text="@string/libelle_nouveau"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <View
                    android:layout_width="600dp"
                    android:layout_height="1dp"
                    android:background="#8a8a8a" />
            </LinearLayout>

        </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal|clip_vertical"
    android:background="#D1D1D1"
    android:orientation="vertical" >

    <include
        android:id="@+id/include_linearlayout_liste_groupes"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top"
        android:layout_marginTop="10dp"
        layout="@layout/linearlayout_listview_groupes"
        android:visibility="visible" />
    
    <include
        android:id="@+id/include_linearlayout_nouveau_groupe"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top"
        android:layout_marginTop="20dp"
        layout="@layout/linearlayout_nouveau_groupe"
        android:visibility="gone" />

</LinearLayout>

</LinearLayout>